Added service call

--- a/StandupManagement.Services/StandupManagement.Services.csproj
+++ b/StandupManagement.Services/StandupManagement.Services.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Report.cs" />
     <Compile Include="Classes\Resource.cs" />
     <Compile Include="IResourceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
