--- a/StandupManagement.UI/StandupManagement.UI.csproj
+++ b/StandupManagement.UI/StandupManagement.UI.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="app\app.component.ts" />
+    <TypeScriptCompile Include="app\Classes\Report.ts" />
     <TypeScriptCompile Include="app\Interfaces\resource.ts" />
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\Services\resource.service.ts" />
@@ -53,7 +54,6 @@
       <DependentUpon>web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
   </PropertyGroup>
